# pipanel

./: CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements.txt
pipanel/: __init__.py  __main__.py  config.py  main.py
pipanel/api/: auth.py  cron.py  disk.py  docker.py  files.py  gpio.py  logs.py  network.py  packages.py  power.py  services.py  settings.py  system.py
pipanel/static/: index.html
pipanel/static/css/: style.css
pipanel/static/js/: app.js
pipanel/ws/: history.py  logs.py  terminal.py
scripts/: pipanel@.service
tests/: __init__.py  test_pipanel.py
